Adding new python script to generate config files (#79)
* Test automation script:
1] Added new script to run test with different configuration
2] updated the README.md file to include instruction to run test with
new script
3] Added skip statements in few test cases to skip tests in runtime
rather than compile time
4] Added changes to support runtime selection of  shared memory model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,18 +127,22 @@ include_directories(/usr/local/include)
 
 #
 # Set openFAM options to be used only by test. Some individual test cases might override these options.
-#
-
-set( TEST_DEFAULT_REGION "Default" )
+# To use the following OpenFAM options set USE_FAM_OPTION flag
+set( TEST_RUNTIME "PMIX" )
+set( TEST_NPE 1 ) #Number of pe used with mpirun
 set( TEST_OPENFAM_MODEL "memory_server" )
-# set( TEST_CIS_INTERFACE_TYPE "rpc" )
+set( TEST_DEFAULT_REGION "Default" )
 set( TEST_CIS_SERVER "127.0.0.1" )
 set( TEST_GRPC_PORT "8787" )
 set( TEST_LIBFABRIC_PROVIDER "sockets" )
 set( TEST_FAM_THREAD_MODEL "FAM_THREAD_SERIALIZE" )
 set( TEST_FAM_CONTEXT_MODEL "FAM_CONTEXT_DEFAULT" )
-set( TEST_RUNTIME "PMIX" )
 set( TEST_NUM_CONSUMER "1" )
+
+if (USE_CONFIG_OPTION)
+	add_definitions(-DUSE_CONFIG_OPTION)	
+endif()
+	
 IF (${CMAKE_MAJOR_VERSION} GREATER 2)
         set( TEST_SKIP_STATUS 77 )
 ELSE ()
@@ -176,11 +180,6 @@ endif()
 # Use native atomics
 add_definitions(-DFAM_ATOMIC_NATIVE)
 
-# Runtime options to be used to invoke test cases
-set( TEST_NPE 1 ) #Number of pe used with mpirun
-set( TEST_RUNTIME_BIN ${PROJECT_SOURCE_DIR}/third-party/build/bin/mpirun ) # path to mpirun/prun
-set( TEST_RUNTIME_OPTS --allow-run-as-root -n ${TEST_NPE} ) # path to mpirun/prun
-
 # Include fam_test_config.h in individual test cases and use the above variables as macros.
 configure_file( ${PROJECT_SOURCE_DIR}/test/common/fam_test_config.h.in ${PROJECT_BINARY_DIR}/test/common/fam_test_config.h )
 
@@ -212,4 +211,3 @@ install (FILES "${PROJECT_SOURCE_DIR}/test/unit-test/config/sample_config" PERMI
         GROUP_READ WORLD_READ
         DESTINATION ${PROJECT_BINARY_DIR}/test/unit-test/config/)
 
-install (DIRECTORY "${PROJECT_SOURCE_DIR}/test/config_files" DESTINATION "${PROJECT_BINARY_DIR}/test")
