--- a/test/unit-test/fam-api/CMakeLists.txt
+++ b/test/unit-test/fam-api/CMakeLists.txt
@@ -22,7 +22,11 @@
 function (add_fam_test file_name)
     add_executable(${file_name} ${file_name}.cpp)
     target_link_libraries(${file_name} openfam pmix pmi2)
-    add_test(NAME ${file_name} COMMAND  ${PROJECT_SOURCE_DIR}/third-party/build/bin/mpirun --allow-run-as-root -np 1 ${CMAKE_CURRENT_BINARY_DIR}/${file_name})
+	add_test(NAME ${file_name} COMMAND ${PROJECT_SOURCE_DIR}/run_test.sh ${CMAKE_CURRENT_BINARY_DIR}/${file_name})
+	IF (${CMAKE_MAJOR_VERSION} GREATER 2)
+        set_tests_properties(${file_name} PROPERTIES SKIP_RETURN_CODE ${TEST_SKIP_STATUS})
+    ENDIF()
+
 endfunction()
 
 #add tests
@@ -58,11 +62,8 @@ add_fam_test(fam_fetch_arithmatic_atomics_test)
 add_fam_test(fam_fetch_logical_atomics_test)
 add_fam_test(fam_fetch_min_max_atomics_test)
 add_fam_test(fam_copy_test)
-if (${TEST_OPENFAM_MODEL} STREQUAL "memory_server")
-	add_fam_test(fam_invalid_key_test)
-	add_fam_test(fam_fence_test)
-elseif (${TEST_OPENFAM_MODEL} STREQUAL "shared_memory")
-	add_fam_test(fam_allocate_map_nvmm)
-	add_fam_test(fam_compare_swap_atomics_nvmm_test)
-	add_fam_test(fam_fetch_arithmatic_atomics_nvmm_test)
-endif()
+add_fam_test(fam_invalid_key_test)
+add_fam_test(fam_fence_test)
+add_fam_test(fam_allocate_map_nvmm)
+add_fam_test(fam_compare_swap_atomics_nvmm_test)
+add_fam_test(fam_fetch_arithmatic_atomics_nvmm_test)
