Made changes to microbenchmark scripts 1] Updated the test scripts for microbenchmark scripts 2] Updated the instructions to run scripts in README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,6 +198,13 @@ file(APPEND ${PROJECT_SOURCE_DIR}/scripts/multi-mem-test-arg.txt "${PROJECT_SOUR
 file(APPEND ${PROJECT_SOURCE_DIR}/scripts/multi-mem-test-arg.txt "${PROJECT_SOURCE_DIR}/build/test/config_files/multi-mem/\n")
 file(APPEND ${PROJECT_SOURCE_DIR}/scripts/multi-mem-test-arg.txt "${PROJECT_SOURCE_DIR}/build/\n")
 
+file(READ ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/args_1.txt.in CONTENTS)
+file(WRITE ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/args_1.txt "")
+file(APPEND ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/args_1.txt "${CONTENTS}")
+file(APPEND ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/args_1.txt "${PROJECT_SOURCE_DIR}/\n")
+file(APPEND ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/args_1.txt "${PROJECT_SOURCE_DIR}/build/test/config_files/single-mem/\n")
+file(APPEND ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/args_1.txt "${PROJECT_SOURCE_DIR}/build/\n")
+
 install (FILES "${PROJECT_SOURCE_DIR}/test/setup.sh" PERMISSIONS OWNER_READ OWNER_WRITE
         OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
         DESTINATION ${PROJECT_BINARY_DIR})
