Fam Region Spanning changes #108 - added async calls for fabric_quiet - Corrections with respect to async call exception handling in quiet_context. - Commented currently unused fields from config files. - Disabling certain negative test cases of atomic calls.   (Please refer Issue #120 for more details)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,7 @@ ENDIF()
 set( TEST_ENABLE_KNOWN_ISSUES "no" )
 if (ENABLE_KNOWN_ISSUES)
         set( TEST_ENABLE_KNOWN_ISSUES "yes" )
+        add_definitions(-DENABLE_KNOWN_ISSUES)
 endif()
 
 if (USE_FAM_PERSIST)
