--- a/test/microbench/fam-api-mb/CMakeLists.txt
+++ b/test/microbench/fam-api-mb/CMakeLists.txt
@@ -31,3 +31,5 @@ endfunction()
 	add_fam_test(fam_microbenchmark_datapath)
 	add_fam_test(fam_microbenchmark_atomic)
 	add_fam_test(fam_microbenchmark_128_compare_swap)
+	add_fam_test(fam_region_spanning)
+	add_fam_test(fam_region_spanning_atomic)
