--- a/examples/api/CMakeLists.txt
+++ b/examples/api/CMakeLists.txt
@@ -1,6 +1,6 @@
  #
  # CMakeLists.txt
- # Copyright (c) 2020 Hewlett Packard Enterprise Development, LP. All rights reserved.
+ # Copyright (c) 2020-2021 Hewlett Packard Enterprise Development, LP. All rights reserved.
  # Redistribution and use in source and binary forms, with or without modification, are permitted provided
  # that the following conditions are met:
  # 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
@@ -61,6 +61,7 @@ add_fam_test(api_fam_min)
 add_fam_test(api_fam_or)
 add_fam_test(api_fam_put_blocking)
 add_fam_test(api_fam_quiet)
+add_fam_test(api_fam_progress)
 add_fam_test(api_fam_scatter)
 add_fam_test(api_fam_set)
 add_fam_test(api_fam_subtract)
