--- a/test/reg-test/fam-api-reg/CMakeLists.txt
+++ b/test/reg-test/fam-api-reg/CMakeLists.txt
@@ -38,7 +38,6 @@ elseif(${TEST_RUNTIME} STREQUAL "PMIX")
 	add_fam_test(fam_runtime_pmix_reg_test)
 	add_fam_test(fam_runtime_pmix_abort_reg_test)
 endif()
-add_fam_test(fam_backup_restore)
 add_fam_test(fam_scatter_gather_stride_user_desc_reg_test)
 add_fam_test(fam_put_get_user_desc_reg_test)
 add_fam_test(fam_scatter_gather_index_blocking_reg_test)
@@ -75,6 +74,7 @@ add_fam_test(fam_put_get_negative_test)
 add_fam_test(fam_fence_reg_test)
 add_fam_test(fam_invalidkey_reg_test)
 add_fam_test(fam_barrier_reg_test)
+add_fam_test(fam_backup_restore_reg_test)
 #add_fam_test(fam_put_get)
 #add_fam_test(fam_put_get_multiple)
 #add_fam_test(fam_put_get_region_ctx)
