--- a/test/reg-test/fam-api-reg/CMakeLists.txt
+++ b/test/reg-test/fam-api-reg/CMakeLists.txt
@@ -38,6 +38,7 @@ elseif(${TEST_RUNTIME} STREQUAL "PMIX")
 	add_fam_test(fam_runtime_pmix_reg_test)
 	add_fam_test(fam_runtime_pmix_abort_reg_test)
 endif()
+add_fam_test(fam_scatter_gather_index_user_desc_reg_test)
 add_fam_test(fam_scatter_gather_stride_user_desc_reg_test)
 add_fam_test(fam_put_get_user_desc_reg_test)
 add_fam_test(fam_scatter_gather_index_blocking_reg_test)
