Fam context and thread model support
Signed-off-by: Faizan Barmawer <sfaizan@hpe.com>

--- a/examples/api/CMakeLists.txt
+++ b/examples/api/CMakeLists.txt
@@ -68,3 +68,4 @@ add_fam_test(api_fam_subtract)
 add_fam_test(api_fam_swap)
 add_fam_test(api_fam_xor)
 add_fam_test(api_fam_resize_region)
+add_fam_test(api_fam_context)
