Changes for supporting SCM.
    Changes to support different memory types (SCM and DRAM)
    Modified the configuration files for memory servers.

--- a/config/fam_pe_config.yaml
+++ b/config/fam_pe_config.yaml
@@ -22,3 +22,6 @@ client_interface_type: rpc
 # Address of Client Interface Service - It can be hostname (fully qualified domain name)/ipv4 address.
 # Applicable only if client_interface_type is rpc.
 fam_client_interface_service_address: 127.0.0.1:8787
+
+# Default memory type for regions created.
+#default_memory_type: persistent
