--- a/test/reg-test/fam-api-reg/CMakeLists.txt
+++ b/test/reg-test/fam-api-reg/CMakeLists.txt
@@ -101,16 +101,16 @@ endif()
 #add_fam_test(fam_noperm_test)
 # Following tests have been commented as there are some issues with non-blocking calls.
 # Will be uncommented after the issue has been addressed.
-#add_fam_test(fam_arithmetic_atomics_mt_reg_test)
-#add_fam_test(fam_cas_atomics_mt_reg_test)
-#add_fam_test(fam_compare_swap_atomics_mt_reg_test)
-#add_fam_test(fam_fetch_arithmetic_atomics_mt_reg_test)
-#add_fam_test(fam_fetch_logical_atomics_mt_reg_test)
-#add_fam_test(fam_fetch_min_max_atomics_mt_reg_test)
-#add_fam_test(fam_min_max_atomics_mt_reg_test)
-#add_fam_test(fam_nonfetch_arithmetic_atomics_mt_reg_test)
-#add_fam_test(fam_nonfetch_logical_atomics_mt_reg_test)
-#add_fam_test(fam_nonfetch_min_max_atomics_mt_reg_test)
-#add_fam_test(fam_put_get_nb_mt_reg_test)
-#add_fam_test(fam_scatter_gather_nonblocking_mt_reg_test)
-#add_fam_test(fam_swap_atomics_mt_reg_test)
+add_fam_test(fam_arithmetic_atomics_mt_reg_test)
+add_fam_test(fam_cas_atomics_mt_reg_test)
+add_fam_test(fam_compare_swap_atomics_mt_reg_test)
+add_fam_test(fam_fetch_arithmetic_atomics_mt_reg_test)
+add_fam_test(fam_fetch_logical_atomics_mt_reg_test)
+add_fam_test(fam_fetch_min_max_atomics_mt_reg_test)
+add_fam_test(fam_min_max_atomics_mt_reg_test)
+add_fam_test(fam_nonfetch_arithmetic_atomics_mt_reg_test)
+add_fam_test(fam_nonfetch_logical_atomics_mt_reg_test)
+add_fam_test(fam_nonfetch_min_max_atomics_mt_reg_test)
+add_fam_test(fam_put_get_nb_mt_reg_test)
+add_fam_test(fam_scatter_gather_nonblocking_mt_reg_test)
+add_fam_test(fam_swap_atomics_mt_reg_test)
