--- a/test/unit-test/fam-api/CMakeLists.txt
+++ b/test/unit-test/fam-api/CMakeLists.txt
@@ -39,7 +39,6 @@ add_fam_test(fam_scatter_gather_stride_user_desc)
 add_fam_test(fam_put_get_user_desc)
 add_fam_test(fam_scatter_gather_index_blocking)
 add_fam_test(fam_scatter_gather_stride_blocking)
-add_fam_test(fam_put_get_region_ctx)
 add_fam_test(fam_quiet_put_get_nonblocking)
 add_fam_test(fam_progress)
 add_fam_test(fam_scatter_gather_index_nonblocking)
@@ -68,3 +67,4 @@ add_fam_test(fam_fence_test)
 add_fam_test(fam_allocate_map_nvmm)
 add_fam_test(fam_compare_swap_atomics_nvmm_test)
 add_fam_test(fam_fetch_arithmatic_atomics_nvmm_test)
+add_fam_test(fam_context_open_close)
