minor changes in pe_config file comments

--- a/config/fam_pe_config.yaml
+++ b/config/fam_pe_config.yaml
@@ -20,7 +20,7 @@ runtime: PMIX
 client_interface_type: rpc
 
 # Device interface for communication for OpenFAM client.
-# Please note this parameter is valid only for for verbs provider
+# Please note that this parameter is valid only for verbs provider
 #if_device: ib0 
 
 # Address of Client Interface Service - It can be hostname (fully qualified domain name)/ipv4 address.
