Adding 9 regression tests for fam context modelling

--- a/test/reg-test/fam-api-reg/CMakeLists.txt
+++ b/test/reg-test/fam-api-reg/CMakeLists.txt
@@ -114,3 +114,5 @@ add_fam_test(fam_nonfetch_min_max_atomics_mt_reg_test)
 add_fam_test(fam_put_get_nb_mt_reg_test)
 add_fam_test(fam_scatter_gather_nonblocking_mt_reg_test)
 add_fam_test(fam_swap_atomics_mt_reg_test)
+add_fam_test(fam_context_reg_test)
+add_fam_test(fam_context_mt_reg_test)
