--- a/config/fam_metadata_config.yaml
+++ b/config/fam_metadata_config.yaml
@@ -3,7 +3,7 @@
 # Metadata manager: default is radixtree. Currently radixtree is the only supported KVS.
 metadata_manager: radixtree
  
-# Path where metadata info is stored. By default, it will be placed in /dev/shm/. 
+# Path where metadata info is stored.  
 metadata_path: /dev/shm/fam_metadata
 
 # Rpc interface
