Use fam specific context inplace of libfabric fi_context
- used fam specific context which is a wrapper over fi_context
- added exceptions for libfabric API failures
- fix issue with getlogin() returning NULL on slurm

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -22,6 +22,7 @@
 
 set(LIBOPENFAM_SRC
   ${LIBOPENFAM_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_context.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_libfabric.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_async_qhandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_exception.cpp
@@ -33,6 +34,7 @@ set(LIBOPENFAM_SRC
 
 set(CIS_SERVER_SRC
   ${CIS_SERVER_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_context.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_libfabric.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_async_qhandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_exception.cpp
@@ -44,6 +46,7 @@ set(CIS_SERVER_SRC
 
 set(MEMORY_SERVER_SRC
   ${MEMORY_SERVER_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_context.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_libfabric.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_async_qhandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_exception.cpp
