--- a/test/reg-test/fam-api-reg/CMakeLists.txt
+++ b/test/reg-test/fam-api-reg/CMakeLists.txt
@@ -76,6 +76,8 @@ add_fam_test(fam_fence_reg_test)
 add_fam_test(fam_invalidkey_reg_test)
 add_fam_test(fam_barrier_reg_test)
 add_fam_test(fam_backup_restore_reg_test)
+add_fam_test(fam_dataitem_interleave_test)
+add_fam_test(fam_dataitem_interleave_advanced_test)
 #add_fam_test(fam_put_get)
 #add_fam_test(fam_put_get_multiple)
 #add_fam_test(fam_put_get_region_ctx)
