Fixed #209 and #213 fam_progress multithread tests

--- a/test/unit-test/fam-api/CMakeLists.txt
+++ b/test/unit-test/fam-api/CMakeLists.txt
@@ -68,3 +68,4 @@ add_fam_test(fam_allocate_map_nvmm)
 add_fam_test(fam_compare_swap_atomics_nvmm_test)
 add_fam_test(fam_fetch_arithmatic_atomics_nvmm_test)
 add_fam_test(fam_context_open_close)
+add_fam_test(fam_progress_mt)
