OpenFAM admin tool Introdusing a tool to manage OpenFAM services
Signed-off-by: gautham-bhat-k <gautham.bhat-k@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,23 +197,11 @@ add_subdirectory(test/permission-test)
 add_subdirectory(test/services-test)
 add_subdirectory(examples/api)
 
-file(READ ${PROJECT_SOURCE_DIR}/scripts/multi-mem-test-arg.txt.in CONTENTS)
-file(WRITE ${PROJECT_SOURCE_DIR}/scripts/multi-mem-test-arg.txt "")
-file(APPEND ${PROJECT_SOURCE_DIR}/scripts/multi-mem-test-arg.txt "${CONTENTS}")
-file(APPEND ${PROJECT_SOURCE_DIR}/scripts/multi-mem-test-arg.txt "${PROJECT_SOURCE_DIR}/\n")
-file(APPEND ${PROJECT_SOURCE_DIR}/scripts/multi-mem-test-arg.txt "${PROJECT_SOURCE_DIR}/build/test/config_files/multi-mem/\n")
-file(APPEND ${PROJECT_SOURCE_DIR}/scripts/multi-mem-test-arg.txt "${PROJECT_SOURCE_DIR}/build/\n")
-
-file(READ ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/single-mem-test-arg.txt.in CONTENTS)
-file(WRITE ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/single-mem-test-arg.txt "")
-file(APPEND ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/single-mem-test-arg.txt "${CONTENTS}")
-file(APPEND ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/single-mem-test-arg.txt "${PROJECT_SOURCE_DIR}/\n")
-file(APPEND ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/single-mem-test-arg.txt "${PROJECT_SOURCE_DIR}/build/test/config_files/single-mem/\n")
-file(APPEND ${PROJECT_SOURCE_DIR}/test/microbench/fam-api-mb/scripts/single-mem-test-arg.txt "${PROJECT_SOURCE_DIR}/build/\n")
-
-install (FILES "${PROJECT_SOURCE_DIR}/test/setup.sh" PERMISSIONS OWNER_READ OWNER_WRITE
-        OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
-        DESTINATION ${PROJECT_BINARY_DIR})
+#install openfam_adm in bin directory
+install (SCRIPT openfam_adm_install.cmake)
+#install template config files in install path
+install (DIRECTORY "${PROJECT_SOURCE_DIR}/config" USE_SOURCE_PERMISSIONS
+		DESTINATION ${PROJECT_BINARY_DIR}/)
 
 install (FILES "${PROJECT_SOURCE_DIR}/test/unit-test/config/sample_config" PERMISSIONS OWNER_READ OWNER_WRITE
         GROUP_READ WORLD_READ
