C interface for OpenFAM
OpenFAM has a C++ interface. We have added
a C interface for OpenFAM.

Signed-off-by: Porno Shome <shome@hpe.com>

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -72,3 +72,9 @@ set(METADATA_SERVER_SRC
   PARENT_SCOPE
   )
 
+set(LIBC_API_SRC
+  ${LIBC_API_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/c_api.cpp
+  PARENT_SCOPE
+  )
+
