--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -78,3 +78,7 @@ endif()
 add_executable (metadata_server ${METADATA_SERVER_SRC})
 
 target_link_libraries(metadata_server yaml-cpp nvmm radixtree grpc grpc++ grpc++_reflection gpr protobuf boost_system fambitmap)
+
+add_library(c_api SHARED ${LIBC_API_SRC})
+
+target_link_libraries(c_api openfam)
