--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -72,8 +72,8 @@ set(METADATA_SERVER_SRC
   PARENT_SCOPE
   )
 
-set(LIBC_API_SRC
-  ${LIBC_API_SRC}
+set(LIBOPENFAM_C_SRC
+  ${LIBOPENFAM_C_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/c_api.cpp
   PARENT_SCOPE
   )
