--- a/test/wrappers-test/openfam_c/CMakeLists.txt
+++ b/test/wrappers-test/openfam_c/CMakeLists.txt
@@ -1,6 +1,6 @@
  #
  # CMakeLists.txt
- # Copyright (c) 2022 Hewlett Packard Enterprise Development, LP. All rights reserved.
+ # Copyright (c) 2022-2023 Hewlett Packard Enterprise Development, LP. All rights reserved.
  # Redistribution and use in source and binary forms, with or without modification, are permitted provided
  # that the following conditions are met:
  # 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
